src/test/deca/context/invalid/class16.deca
class A{
}
class C{
}
{
    A a = new A();
    C b = new A();
    A z=b;
    
}